--- a/package.json
+++ b/package.json
@@ -187,6 +187,7 @@
         "fs-extra": "^10.1.0",
         "fs-monkey": "^1.0.3",
         "fs.realpath": "^1.0.0",
+        "fullcalendar": "^6.1.8",
         "function-bind": "^1.1.1",
         "gensync": "^1.0.0-beta.2",
         "get-caller-file": "^2.0.5",
@@ -446,8 +447,8 @@
         "std-env": "^3.3.3",
         "stream-browserify": "^2.0.2",
         "stream-http": "^2.8.3",
-        "string-width": "^4.2.3",
         "string_decoder": "^1.3.0",
+        "string-width": "^4.2.3",
         "strip-ansi": "^6.0.1",
         "strip-final-newline": "^2.0.0",
         "style-loader": "^2.0.0",
